# set10108

labs/cw1/: main.cpp
labs/cw2/: CMakeLists.txt  nqueens.cpp
labs/cw2/lib_nqueens_bit/: nqueens_bit.cpp  nqueens_bit.h  nqueens_solver.cl
labs/lab01/: CMakeLists.txt  million-num-min.cpp  monte-carlo-pi.cpp
labs/lab04/: hello-openmp.cpp
labs/lab06/: vec-add.cu
labs/lab06b/: smooth-2d.cu
